--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chabot app",
+  "name": "myfirstchabot",
   "version": "0.0.0",
   "description": "your chabot app",
   "main": "app.js",
