--- a/example/config.json
+++ b/example/config.json
@@ -2,6 +2,7 @@
     "port": 5000,
     "bots": {
         "github": {
+            "hostname": "github.com",
             "token": "YOUR_TOKEN",
             "route": "/github/hooks/:roomid"
         }
